--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=3333
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_inmueble?currentSchema=sc_inmueble&ssl=false
 spring.datasource.username=admin
-spring.datasource.password=Onepiece1099!
+spring.datasource.password=adminpass123!
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
